<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="На вашому рахунку:"
		android:gravity="center_horizontal"
		android:textSize="30sp"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/tv_balance"
		android:layout_gravity="center_vertical|center_horizontal"
		android:textSize="50sp"
		android:textStyle="bold"
		android:textColor="#333333"
		android:layout_marginTop="40dp"
		android:layout_marginBottom="40dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<Button
			style="@style/SignInSuccessActivityButton"
			android:id="@+id/btn_get_money"
			android:text="@string/btn_eject_money"
			android:background="#9e3434"/>
		<Button
			style="@style/SignInSuccessActivityButton"
			android:id="@+id/btn_deposit_money"
			android:text="@string/btn_deposit_money"
			android:background="#349e3f"/>
		<Button
			style="@style/SignInSuccessActivityButton"
			android:id="@+id/btn_exit_second_activity"
			android:text="@string/btn_exit_second_activity"
			android:background="#43514e"/>
	</LinearLayout>

</LinearLayout>
